# og

./: .env.mapping  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yaml
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/constants/: dimensions.rs  fonts.rs  icons.rs  mod.rs  redis_namespaces.rs
src/grpc/: defs.rs
src/middlewares/: rate_limiter.rs
src/proto/: api_service.v1.rs  api_service.v1.serde.rs  api_service.v1.tonic.rs  open_graph_def.v1.rs  open_graph_def.v1.serde.rs
src/routes/: favicon.rs  health.rs  index.rs  mod.rs  robots.rs  stories.rs  tags.rs
src/utils/: construct_svg_tree.rs  escape_string.rs  get_pixmap.rs  get_text_width.rs  get_thumbnail_url.rs  mod.rs  process_text.rs  truncate_text.rs  wrap_text.rs
static/: robots.txt
templates/: story.stpl  tag.stpl
