[package]
name = "storiny_og"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["zignis <velociraptorm77@gmail.com>"]
repository = "https://github.com/storiny/og.git"

[dependencies]
actix-cors = "0.7.0"
actix-extensible-rate-limit = { version = "0.2.1", features = ["redis"] }
actix-http = "3.4.0"
actix-web = { version = "4.4.0", features = ["__compress"] }
async-trait = "0.1.73"
dotenv = "0.15.0"
envy = "0.4.2"
mime = "0.3.17"
redis = { version = "0.25.3", features = ["tokio-comp", "aio", "connection-manager"] }
reqwest = { version = "0.12.2", features = ["json"] }
sentry = { version = "0.32.0", features = ["tracing"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.115"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
