[package]
name = "storiny_og"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["zignis <velociraptorm77@gmail.com>"]
repository = "https://github.com/storiny/og.git"

[lib]
doctest = false

[dependencies]
abbrev-num = "0.1.0"
actix-cors = "0.7.0"
actix-extensible-rate-limit = { version = "0.2.1", features = ["redis"] }
actix-http = "3.4.0"
actix-web = { version = "4.4.0", features = ["__compress"] }
dotenv = "0.15.0"
envy = "0.4.2"
lazy_static = "1.4.0"
mime = "0.3.17"
png = "0.17.13"
prost = "0.12.4"
redis = { version = "0.25.3", features = ["tokio-comp", "aio", "connection-manager"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
resvg = "0.41.0"
rusttype = "0.9.3"
sailfish = "0.8.3"
sentry = { version = "0.32.0", features = ["tracing"] }
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
tonic = { version = "0.11.0", features = ["gzip", "tls", "transport"] }
textwrap = { version = "0.16.1", features = ["smawk"] }
thiserror = "1.0.48"
tiny-skia = { version = "0.11.4", features = ["png-format"] }
tokio = { version = "1.32.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.11.0"
unidecode = "0.3.0"
usvg = "0.41.0"
pbjson = "0.6.0"
async-trait = "0.1.79"
actix-files = "0.6.6"

[dev-dependencies]
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "rayon"] }
image-compare = "0.4.1"
